--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
@@ -732,45 +732,44 @@
                     </py-repl>
                     En el código a continuación, obtendremos los mejores resultados obtenidos:
                     <py-repl>
-                        display('Mejores parámetros: ', grid_best_params_)
-                        display('Mejor estimador: ', grid_best_estimator_)
-                        display('Mejor resultado: ', grid_best_score_)
+                        display('Mejores parámetros: ', grid.best_params_)
+                        display('Mejor estimador: ', grid.best_estimator_)
+                        display('Mejor resultado: ', grid.best_score_)
                     </py-repl>
                     Si ejecutamos el código anterior, podemos visualizar los hiperparámetros del mejor árbol de decisión posible para el conjunto de datos empleado.
-                    <br />Además, podemos comprobar un resultado final obtenido del 96.66%, con lo cuál tenemos un algoritmo muy bueno.
+                    <br />Además, podemos comprobar un resultado final obtenido del 90%, con lo cuál tenemos un algoritmo muy bueno.
                     <br />Nota: Al diseñar algoritmos usando GridSearchCV, es recomendable obtener un score superior al 80%.
-                    Otro tipo de árbol de decisión que podemos generar, es un árbol de decisión aleatorio. En el código a continuación, vamos a aplicar el mismo procedimiento aplicado anteriormente
-                    <br /> para un árbol de decisión aleatorio:
+                    <br />Otro tipo de árbol de decisión que podemos generar, es un árbol de decisión aleatorio. En el código a continuación, vamos a generar un arbol aleatorio:
+                    <br />Aviso: Debido a la búsqueda de hiperparámetros, puede producirse un fallo de página al emplear la búsqueda GridSearchCV.
                     <py-repl>
                         # Importamos las librerias necesarias
                         from sklearn import metrics
                         from sklearn.ensemble import RandomForestClassifier
                         from sklearn.model_selection import GridSearchCV
-                        # Creamos el arbol de decision
-                        decision_tree = RandomForestClassifier()
                         # Establecemos los parametros para gridsearchcv
                         param_dict = {
-                            "criterion": ["gini", "entropy"],
-                            "max_depth": range(1,10),
-                            "min_samples_split": range(1,10),
-                            "min_samples_leaf": range(1,5)
+                                        "criterion": ["gini","entropy"],
+                                        "max_depth": range(1,3),
+                                        "min_samples_split": range(2,5),
+                                        "min_samples_leaf": range(1,3)
                         }
                         # Encontramos el mejor hiperparámetro usando gridsearchCV
-                        grid = GridSearchCV(decision_tree,
+                        grid = GridSearchCV(RandomForestClassifier(),
                                             param_grid = param_dict,
                                             cv=5,
                                             verbose=1,
                                             n_jobs=-1
-                        )
+                                            )
                         # Entrenamos el modelo
                         grid.fit(X,Y)
                     </py-repl>
                     En el código a continuación, visualizamos los mejores resultados obtenidos:
                     <py-repl>
-                        display('Mejores parámetros: ', grid_best_params_)
-                        display('Mejor estimador: ', grid_best_estimator_)
-                        display('Mejor resultado: ', grid_best_score_)
+                        display('Mejores parámetros: ', grid.best_params_)
+                        display('Mejor estimador: ', grid.best_estimator_)
+                        display('Mejor resultado: ', grid.best_score_)
                     </py-repl>
+                    Nota: Tener en cuenta que al ser un árbol aleatorio el mejor resultado puede cambiar. Por ello, es recomendable ejecutar el código una cierta cantidad de veces.
                 </div>
                 
                 <!--Paso 4: Conclusiones-->
