--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
@@ -688,7 +688,7 @@
                         <li>
                             Dividiendo el conjunto de datos en datos de entrenamiento y datos de test: Permite asegurarnos de no usar las mismas observaciones en todos los datos
                             de entrenamiento.
-                            <br /> Inconveniente: Las puntuaciones de precisión del conjunto de pruebas pueden variar según las observaciones que haya en el conjunto. Sin embargo, podemos solucionar este problema usando validación cruzada.
+                            <br /> Inconveniente: Las puntuaciones de precisión del conjunto de pruebas pueden variar según las observaciones que haya en el conjunto.
                         </li>
                     </ol>
                     Nota: Al diseñar los algoritmos de mineria de datos, es recomendable realizar una búsqueda de los mejores parámetros de diseño del algoritmo. Para ello, un método eficaz es usando GridSearchCV.
@@ -722,10 +722,10 @@
                         }
                         # Encontramos el mejor hiperparámetro usando gridsearchCV
                         grid = GridSearchCV(decision_tree,
-                                            param_grid = param_dict,
-                                            cv=5,
-                                            verbose=1,
-                                            n_jobs=-1
+                                param_grid = param_dict,
+                                cv=5,
+                                verbose=1,
+                                n_jobs=-1
                         )
                         # Entrenamos el modelo
                         grid.fit(X,Y)
@@ -748,18 +748,18 @@
                         from sklearn.model_selection import GridSearchCV
                         # Establecemos los parametros para gridsearchcv
                         param_dict = {
-                                        "criterion": ["gini","entropy"],
-                                        "max_depth": range(1,3),
-                                        "min_samples_split": range(2,5),
-                                        "min_samples_leaf": range(1,3)
+                        "criterion": ["gini","entropy"],
+                        "max_depth": range(1,3),
+                        "min_samples_split": range(2,5),
+                        "min_samples_leaf": range(1,3)
                         }
                         # Encontramos el mejor hiperparámetro usando gridsearchCV
                         grid = GridSearchCV(RandomForestClassifier(),
-                                            param_grid = param_dict,
-                                            cv=5,
-                                            verbose=1,
-                                            n_jobs=-1
-                                            )
+                        param_grid = param_dict,
+                        cv=5,
+                        verbose=1,
+                        n_jobs=-1
+                        )
                         # Entrenamos el modelo
                         grid.fit(X,Y)
                     </py-repl>
@@ -770,6 +770,43 @@
                         display('Mejor resultado: ', grid.best_score_)
                     </py-repl>
                     Nota: Tener en cuenta que al ser un árbol aleatorio el mejor resultado puede cambiar. Por ello, es recomendable ejecutar el código una cierta cantidad de veces.
+                    <h3>Dividiendo el conjunto de datos en datos de entrenamiento y de test</h3>
+                    En esta sección, diseñaremos distintos árboles de decisión aplicando el dataset iris aplicando división del mismo en datos de entrenamiento y de test.
+                    <br />En el código a continuación, diseñaremos un árbol de decisión sobre los datos originales del dataset iris:
+                    <py-repl>
+                        # Importamos las librerias necesarias
+                        from sklearn import metrics
+                        from sklearn.tree import DecisionTreeClassifier
+                        from sklearn.model_selection import GridSearchCV, train_test_split
+                        # Creamos el arbol de decision
+                        decision_tree = DecisionTreeClassifier()
+                        # Establecemos los parametros para gridsearchcv
+                        param_dict = {
+                            "criterion": ["gini", "entropy"],
+                            "max_depth": range(1,10),
+                            "min_samples_split": range(1,10),
+                            "min_samples_leaf": range(1,5)
+                        }
+                        # Encontramos el mejor hiperparámetro usando gridsearchCV
+                        grid = GridSearchCV(decision_tree,
+                                param_grid = param_dict,
+                                cv=5,
+                                verbose=1,
+                                n_jobs=-1
+                        )
+                        # Dividimos los datos en datos de entrenamiento y de test
+                        X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.4, random_state=5)
+                        # Entrenamos el modelo
+                        grid.fit(X_train,y_train)
+                    </py-repl>
+                    En el código a continuación, visualizamos los mejores resultados obtenidos:
+                    <py-repl>
+                        display('Mejores parámetros: ', grid.best_params_)
+                        display('Mejor estimador: ', grid.best_estimator_)
+                        display('Mejor resultado: ', grid.best_score_)
+                    </py-repl>
+                    Si ejecutamos el código anterior, podemos obtener un puntuación final superior al 90%, por lo que hemos obtenido unos buenos resultados.
+                    <h2></h2>
                 </div>
                 
                 <!--Paso 4: Conclusiones-->
@@ -839,7 +876,7 @@
             :param test_data: Test data of Dataset
             """
             # Create models
-            models = [DecisionTreeClassifier(), KNeighborsClassifier(n_neighbors=3), RandomForestClassifier(), SVC(probability = True)]
+            models = [KNeighborsClassifier(n_neighbors=3), , SVC(probability = True)]
             classifiers = ['DecisionTree', 'KNN', 'RandomForest', 'SVC']
             log_cols = ["Classifier", "Accuracy"]
             log = pd.DataFrame(columns=log_cols)
