Se ha incluido el paquete opencv en pyscript

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
@@ -29,6 +29,7 @@
         "matplotlib",
         "scipy",
         "scikit-learn",
+        'opencv-python',
         ]
         terminal = false
         docked = false
